# dxf-tools-rs

./: .gitignore  Cargo.toml  DWG_WRITER_ARCHITECTURE.md  README.md  test_output_all_entities_binary.dxb  test_output_version_2000_binary.dxb  test_output_version_2004_binary.dxb  test_output_version_2007_binary.dxb  test_output_version_2010_binary.dxb  test_output_version_2013_binary.dxb  test_output_version_2018_binary.dxb  test_output_version_R13_binary.dxb  test_output_version_R14_binary.dxb
examples/: generate_test_dwg.rs
src/: lib.rs
src/classes/: mod.rs
src/io/: mod.rs
src/io/dwg/: classes_reader.rs  compressor.rs  crc.rs  crc32_stream_handler.rs  crc8_stream_handler.rs  decompressor.rs  dwg_checksum_calculator.rs  dwg_document_builder.rs  dwg_header_handles_collection.rs  dwg_reader.rs  dwg_reader_configuration.rs  dwg_section_io.rs  file_header.rs  handle_reader.rs  header_reader.rs  mod.rs  object_reader.rs  reader.rs  section.rs  section_reader.rs  stream_reader.rs  stream_writer.rs  template_builder.rs  writer.rs
src/io/dwg/dwg_stream_readers/: DwgAppInfoReader.rs  DwgClassesReader.rs  DwgHandleReader.rs  DwgHeaderReader.rs  DwgLZ77AC18Decompressor.rs  DwgLZ77AC21Decompressor.rs  DwgMergedReader.rs  DwgObjectReader.Entities.rs  (+12 more)
src/io/dxf/: group_code_value.rs  reader.rs
src/types/: mod.rs
tests/: COMPREHENSIVE_TEST_DOCUMENTATION.md  all_entities_output_test.rs  comprehensive_entity_test.rs  dwg_dxf_unified_test.rs  dwg_reading_tests.rs  dwg_writer_test.rs  reference_samples.rs
tmp/: dwg_method_parity.json  dwg_method_parity_invariant.json
(+28 files in other folders)
